--- a/style/tailwind.css
+++ b/style/tailwind.css
@@ -1,6 +1,46 @@
 @import "tailwindcss";
 @plugin "daisyui";
 
+/* Force responsive grid classes generation */
+.grid-cols-1 { 
+  grid-template-columns: repeat(1, minmax(0, 1fr)); 
+}
+
+.grid-cols-2 { 
+  grid-template-columns: repeat(2, minmax(0, 1fr)); 
+}
+
+.grid-cols-3 { 
+  grid-template-columns: repeat(3, minmax(0, 1fr)); 
+}
+
+.grid-cols-5 { 
+  grid-template-columns: repeat(5, minmax(0, 1fr)); 
+}
+
+@media (min-width: 640px) {
+  .sm\:grid-cols-2 { 
+    grid-template-columns: repeat(2, minmax(0, 1fr)); 
+  }
+}
+
+@media (min-width: 768px) {
+  .md\:grid-cols-3 { 
+    grid-template-columns: repeat(3, minmax(0, 1fr)); 
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:grid-cols-5 { 
+    grid-template-columns: repeat(5, minmax(0, 1fr)); 
+  }
+  
+  .lg\:stats-horizontal .stat { 
+    display: flex; 
+    flex-direction: row; 
+  }
+}
+
 :root {
   --border-radius: 0.5rem;
 }
